fix: used whitespace according to rule 3.6

--- a/style.css
+++ b/style.css
@@ -159,7 +159,8 @@
 /* Completed */
 
 .completed-list .completed  {
-	text-decoration: line-through color: #888;
+	text-decoration: line-through;
+	color: #888;
 }
 
 /* Edit Task */
